fix: Broken UI

--- a/css/app.css
+++ b/css/app.css
@@ -21,7 +21,7 @@ body, html {
     /* web gl context in here */
     position: absolute;
     height: 100%;
-    width:  100%%;
+    width:  100%;
     margin: auto;
 }
 
